[gd_scene load_steps=10 format=3 uid="uid://ceic6x4ve4vj2"]

[ext_resource type="Texture2D" uid="uid://e50x7l2aje5a" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="1_18bl6"]
[ext_resource type="Script" path="res://UI/game_ui.gd" id="1_kemk4"]
[ext_resource type="Texture2D" uid="uid://0ryvltnr6bgq" path="res://addons/Tiny Swords/Resources/Resources/M_Idle_(NoShadow).png" id="3_wpcce"]
[ext_resource type="Texture2D" uid="uid://d1i80mwvqyq6u" path="res://addons/Tiny Swords/Factions/Knights/Troops/Dead/Dead.png" id="4_lwbv6"]

[sub_resource type="SystemFont" id="SystemFont_mgx4l"]
font_names = PackedStringArray("Monospace")
font_weight = 999

[sub_resource type="LabelSettings" id="LabelSettings_do4xj"]
font = SubResource("SystemFont_mgx4l")
font_size = 25

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tpokk"]
texture = ExtResource("1_18bl6")
texture_margin_left = 33.9816
texture_margin_top = 16.0
texture_margin_right = 32.9088
texture_margin_bottom = 43.9869
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="LabelSettings" id="LabelSettings_i50bv"]
font_size = 25
font_color = Color(0.0177324, 0.0177324, 0.0177324, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0.00392157, 0.00392157, 0.00392157, 0.313726)

[sub_resource type="AtlasTexture" id="AtlasTexture_y18gp"]
atlas = ExtResource("3_wpcce")
region = Rect2(40, 48, 56, 56)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_kemk4")

[node name="TimeLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_top = 5.0
offset_right = 69.0
offset_bottom = 40.0
grow_horizontal = 2
text = "00:00"
label_settings = SubResource("LabelSettings_do4xj")
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 331.0
offset_bottom = 108.0
theme_override_styles/panel = SubResource("StyleBoxTexture_tpokk")

[node name="MeatLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -32.5
offset_right = -74.0
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_i50bv")
horizontal_alignment = 2

[node name="MeatRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -36.5
offset_right = -9.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture = SubResource("AtlasTexture_y18gp")

[node name="KillsLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -32.5
offset_right = 77.0
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
text = "0
"
label_settings = SubResource("LabelSettings_i50bv")
horizontal_alignment = 2

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 0
offset_left = 258.0
offset_top = 17.0
offset_right = 298.0
offset_bottom = 57.0
color = Color(1, 1, 1, 0)

[node name="Dead" type="Sprite2D" parent="Panel/ColorRect"]
position = Vector2(12, 4)
texture = ExtResource("4_lwbv6")
hframes = 7
vframes = 2
frame = 6

[node name="Panel2" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -38.0
grow_horizontal = 2
grow_vertical = 0

[node name="LevelTextLabel" type="Label" parent="Panel2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 45.0
offset_bottom = 11.5
grow_vertical = 2
text = "Level:"

[node name="LevelLabel" type="Label" parent="Panel2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 54.0
offset_top = -11.5
offset_right = 94.0
offset_bottom = 11.5
grow_vertical = 2
text = "1"

[node name="ExpProgressBar" type="ProgressBar" parent="Panel2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1060.0
offset_top = -13.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 2
